MDEV-6388: ANALYZE $stmt output in the slow query log

Make log_slow_verbosity=explain actually print ANALYZE (that
is, EXPLAIN otuput with two extra columns).