sql/sql_lex.h
@@ -541,7 +541,7 @@ class Explain_query;
 void delete_explain_query(LEX *lex);
 void create_explain_query(LEX *lex, MEM_ROOT *mem_root);
 void create_explain_query_if_not_exists(LEX *lex, MEM_ROOT *mem_root);
-bool print_explain_query(LEX *lex, THD *thd, String *str);
+bool print_explain_for_slow_log(LEX *lex, THD *thd, String *str);
 
 class st_select_lex_unit: public st_select_lex_node {
 protected:
